--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,15 @@
             </div>
         </div>
 
+        <div class="chat-container">
+            <iframe
+                allow="microphone;"
+                width="350"
+                height="430"
+                src="https://console.dialogflow.com/api-client/demo/embedded/17d7b69f-d14f-4d01-9365-1e8a10e701c8">
+            </iframe>
+        </div>
+
         <footer>
             <h3>Find me to discuss the movie</h3>
              
